--- a/blog/_config.fluid.yml
+++ b/blog/_config.fluid.yml
@@ -108,7 +108,7 @@ fun_features:
     enable: true
     element: h1,h2,h3,h4,h5,h6
     # Options: left | right
-    placement: left
+    placement: right
     # Options: hover | always | touch
     visible: hover
     # Options: § | # | ❡
@@ -224,9 +224,9 @@ color:
 # 主题字体配置
 # Font
 font: 
-  font_size: 16px
+  font_size: 18px
   font_family: 
-  letter_spacing: 0.03em
+  letter_spacing: 0.05em
   code_font_size: 80%
 
 # 指定自定义 .js 文件路径，支持列表；路径是相对 source 目录，如 /js/custom.js 对应存放目录 source/js/custom.js
