--- a/blog/.github/dependabot.yml
+++ b/blog/.github/dependabot.yml
@@ -5,3 +5,16 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 20
+deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
